<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="you_have_to_select_at_least_one_category">You have to select at least one category.</string>
    <string name="small">Small album</string>
    <string name="accent_color">Accent color</string>
    <string name="accent_color_desc">The theme accent color, defaults to teal</string>
    <string name="action_about">About</string>
    <string name="action_add_to_favorites">Add to favorites</string>
    <string name="action_add_to_playing_queue">Add to playing queue</string>
    <string name="action_add_to_playlist">Add to playlist</string>
    <string name="action_clear_playing_queue">Clear playing queue</string>
    <string name="action_clear_playlist">Clear playlist</string>
    <string name="action_delete">Delete</string>
    <string name="action_delete_from_device">Delete from device</string>
    <string name="action_details">Details</string>
    <string name="action_go_to_album">Go to album</string>
    <string name="action_go_to_artist">Go to artist</string>
    <string name="action_go_to_genre">Go to genre</string>
    <string name="action_go_to_start_directory">Go to start directory</string>
    <string name="action_grant">Grant</string>
    <string name="action_grid_size">Grid size</string>
    <string name="action_grid_size_land">Grid size (land)</string>
    <string name="action_next">Next</string>
    <string name="action_play">Play</string>
    <string name="action_play_next">Play next</string>
    <string name="action_play_pause">Play/Pause</string>
    <string name="action_previous">Previous</string>
    <string name="action_remove_from_favorites">Remove from favorites</string>
    <string name="action_remove_from_playing_queue">Remove from playing queue</string>
    <string name="action_remove_from_playlist">Remove from playlist</string>
    <string name="action_rename">Rename</string>
    <string name="action_save_playing_queue">Save playing queue</string>
    <string name="action_scan">Scan</string>
    <string name="action_scan_directory">Scan directory</string>
    <string name="action_search">Search</string>
    <string name="set">Set</string>
    <string name="action_set">Start</string>
    <string name="action_set_as_ringtone">Set as ringtone</string>
    <string name="action_set_as_start_directory">Set as start directory</string>
    <string name="action_settings">"Settings"</string>
    <string name="action_share">Share</string>
    <string name="action_shuffle_all">Shuffle all</string>
    <string name="action_shuffle_playlist">Shuffle playlist</string>
    <string name="action_sleep_timer">Sleep timer</string>
    <string name="action_sort_order">Sort order</string>
    <string name="action_tag_editor">Tag editor</string>
    <string name="adaptive">Adaptive</string>
    <string name="add_action">Add</string>
    <string name="add_photo">Add \nphoto</string>
    <string name="add_playlist_title">"Add to playlist"</string>
    <string name="music">Music Creator</string>
    <string name="added_title_to_playing_queue">"Added 1 title to the playing queue."</string>
    <string name="added_x_titles_to_playing_queue">Added %1$d titles to the playing queue.</string>
    <string name="album">Album</string>
    <string name="album_artist">Album artist</string>
    <string name="album_or_artist_empty">The title or artist is empty.</string>
    <string name="albums">Albums</string>
    <string name="always">Always</string>
    <string name="app_share">Hey check out this cool music player at: https://play.google.com/store/apps/details?id=%s</string>
    <string name="app_shortcut_last_added_long">@string/last_added</string>
    <string name="app_shortcut_last_added_short">@string/last_added</string>
    <string name="app_shortcut_shuffle_all_long">@string/action_shuffle_all</string>
    <string name="app_shortcut_top_tracks_long">@string/my_top_tracks</string>
    <string name="app_shortcut_shuffle_all_short">Shuffle</string>
    <string name="app_shortcut_top_tracks_short">Top Tracks</string>
    <string name="app_widget_big_name">Retro music - Big</string>
    <string name="app_widget_card_name">Retro music - Card</string>
    <string name="app_widget_classic_name">Retro music - Classic</string>
    <string name="app_widget_small_name">Retro music - Small</string>
    <string name="app_widget_text_name">Retro music - Text</string>
    <string name="artist">Artist</string>
    <string name="artists">Create</string>
    <string name="audio_focus_denied">Audio focus denied.</string>
    <string name="audio_settings_summary">Change the sound settings and adjust the equalizer controls</string>
    <string name="bass_boost">Bass Boost</string>
    <string name="biography">Biography</string>
    <string name="black_theme_name">Just Black</string>
    <string name="blacklist">Blacklist</string>
    <string name="blur">Blur</string>
    <string name="blur_card">Blur Card</string>
    <string name="pref_keep_screen_on_title">Keep the screen on</string>
    <string name="pref_keep_screen_on_summary">Keep in mind that enabling this feature may affect battery life</string>
    <string name="pref_blur_amount_title">Blur amount</string>
    <string name="pref_blur_amount_summary">Amount of blur applied for blur themes, lower is faster</string>
    <string name="buy_retro_music_pro">Retro Music Pro</string>
    <string name="cancel_current_timer">Cancel</string>
    <string name="card">Card</string>
    <string name="card_color_style">Colored Card</string>
    <string name="card_circular_style">Circular</string>
    <string name="image">Image</string>
    <string name="card_style">Card</string>
    <string name="cast">Cast</string>
    <string name="changelog">Changelog</string>
    <string name="changelog_summary">Changelog maintained on the Telegram channel</string>
    <string name="clear_action">Clear</string>
    <string name="clear_blacklist">Clear blacklist</string>
    <string name="clear_playlist_title">Clear playlist</string>
    <string name="clear_playlist_x"><![CDATA[Clear the playlist <b>%1$s</b>? This can\u2019t be undone!]]></string>
    <string name="close_notification">Close</string>
    <string name="color">Color</string>
    <string name="color_theme_name">Color</string>
    <string name="day_night_theme_name">Day Night(alpha)</string>
    <string name="colors">Colors</string>
    <string name="could_not_create_playlist">Couldn\u2019t create playlist.</string>
    <string name="could_not_download_album_cover">"Couldn\u2019t download a matching album cover."</string>
    <string name="could_not_restore_purchase">Could not restore purchase.</string>
    <string name="could_not_scan_files">Could not scan %d files.</string>
    <string name="create_action">Create</string>
    <string name="created_playlist_x">Created playlist %1$s.</string>
    <string name="credit_title">Members and contributors </string>
    <string name="currently_listening_to_x_by_x">Currently listening to %1$s by %2$s.</string>
    <string name="dark_theme_name">Kinda Dark</string>
    <string name="default_hint">No Lyrics</string>
    <string name="delete_playlist_title">Delete playlist</string>
    <string name="delete_playlist_x"><![CDATA[Delete the playlist <b>%1$s</b>?]]></string>
    <string name="delete_playlists_title">Delete playlists</string>
    <string name="delete_song_x"><![CDATA[Delete the song <b>%1$s</b>?]]></string>
    <string name="delete_x_playlists"><![CDATA[Delete <b>%1$d</b> playlists?]]></string>
    <string name="delete_x_songs"><![CDATA[Delete <b>%1$d</b> songs?]]></string>
    <string name="delete_song_title">Delete song</string>
    <string name="delete_songs_title">Delete songs</string>
    <string name="deleted_x_songs">Deleted %1$d songs.</string>
    <string name="do_you_want_to_clear_the_blacklist">Do you want to clear the blacklist?</string>
    <string name="do_you_want_to_remove_from_the_blacklist"><![CDATA[Do you want to remove <b>%1$s</b> from the blacklist?]]></string>
    <string name="donate">Donate</string>
    <string name="donate_summary">If you think I deserve to get paid for my work, you can leave some
    money here</string>
    <string name="donation_header">Buy me a:</string>
    <string name="download_from_last_fm">Download from Last.fm</string>
    <string name="edit_cover">Edit cover</string>
    <string name="empty">Empty</string>
    <string name="equalizer">Equalizer</string>
    <string name="faq">FAQ</string>
    <string name="favorites">Favorites</string>
    <string name="flat">Flat</string>
    <string name="folders">Folders</string>
    <string name="for_you">For you</string>
    <string name="full">Full</string>
    <string name="general_settings_summary">Change the theme and colors of the app</string>
    <string name="general_settings_title">Look and feel</string>
    <string name="genre">Genre</string>
    <string name="genres">Genres</string>
    <string name="genres_label">Genres</string>
    <string name="git_hub_summary">Fork the project on GitHub</string>
    <string name="google_plus_community">Join the Google Plus community where you can ask for help or follow Retro Music updates</string>
    <string name="grid_size_1">1</string>
    <string name="grid_size_2">2</string>
    <string name="grid_size_3">3</string>
    <string name="grid_size_4">4</string>
    <string name="grid_size_5">5</string>
    <string name="grid_size_6">6</string>
    <string name="grid_size_7">7</string>
    <string name="grid_size_8">8</string>
    <string name="history">History</string>
    <string name="home">Home</string>
    <string name="image_settings_summary">Change artist image download settings</string>
    <string name="inserted_x_songs_into_playlist_x">Inserted %1$d songs into the playlist %2$s.</string>
    <string name="instagram_page">Instagram</string>
    <string name="instagram_page_summary">Share your Retro Music setup to showcase on Instagram</string>
    <string name="label_bit_rate">Bitrate</string>
    <string name="label_file_format">Format</string>
    <string name="label_file_name">File name</string>
    <string name="label_file_path">File path</string>
    <string name="label_file_size">Size</string>
    <string name="label_sampling_rate">Sampling rate</string>
    <string name="label_track_length">Length</string>
    <string name="last_added">Last added</string>
    <string name="lets_play_something">Let\'s play some music</string>
    <string name="library">Library</string>
    <string name="licenses">Licenses</string>
    <string name="light_theme_name">Clearly White</string>
    <string name="listing_files">Listing files</string>
    <string name="loading_products">Loading products…</string>
    <string name="lyrics">Lyrics</string>
    <string name="material">Material</string>
    <string name="my_name">Name</string>
    <string name="my_top_tracks">Most played</string>
    <string name="never">Never</string>
    <string name="new_banner_photo">New banner photo</string>
    <string name="new_playlist_title">New playlist</string>
    <string name="new_profile_photo">New profile photo</string>
    <string name="new_start_directory">%s is the new start directory.</string>
    <string name="no_albums">No albums</string>
    <string name="no_artists">No create</string>
    <string name="no_audio_ID">"Play a song first, then try again."</string>
    <string name="no_equalizer">No equalizer found</string>
    <string name="no_genres">No genres</string>
    <string name="no_lyrics_found">No lyrics found</string>
    <string name="no_playlists">No playlists</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="editor">Creator</string>
    <string name="Music">Music</string>
    <string name="check_password">Check Password</string>
    <string name="register">register</string>
</resources>